# VMachine

./: Cargo.toml  README.md
docs/: functions.md  instructions.md
src/: command.rs  controller.rs  decoder.rs  main.rs  memory.rs  state.rs
src/vm/: command.rs  controller.rs  decoder.rs  display.rs  instruction.rs  memory.rs  mod.rs  state.rs
src/vm/arch/: decoder.rs  instruction.rs  mod.rs
src/vm/components/: controller.rs  display.rs  memory.rs  mod.rs  state.rs
src/vm/utils/: instruction_macro.rs  mod.rs  register_macro.rs
