[package]
name = "toy_vmachine"
version = "0.1.0"
edition = "2021"
authors = ["Danila Mishin me@danmishin.ru"]
license = "MIT"
description = "A toy virtual machine"
repository = "https://github.com/JungleTryne/VMachine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }